# usql

./: .gitignore  README.md  pom.xml  usql-design.md
demo/spring-boot-test/: pom.xml
demo/spring-boot-test/src/main/resources/: application.yml
docker/: docker-compose-duckdb.yml  docker-compose.yml
docker/clickhouse/: users.xml
docs/: api.md  execution-plan.md  performance.md
usql-cli/: dependency-reduced-pom.xml  pom.xml
usql-core/: pom.xml
usql-core/src/main/resources/: functions.yaml
usql-jdbc/: pom.xml
usql-proxy/: dependency-reduced-pom.xml  pom.xml
usql-python/: .gitignore  README.md  pyproject.toml
usql-python/src/usql/: __init__.py  compiler.py  result.py  schema.py
usql-python/src/usql/analyzer/: semantic.py
usql-python/src/usql/ast/: __init__.py  nodes.py
usql-python/src/usql/backend/: base.py  clickhouse.py  dm.py  duckdb.py  generate_options.py  mariadb.py  mysql.py  oceanbase.py  oracle.py  postgresql.py  sqlite.py  sqlserver.py  tidb.py
usql-python/src/usql/capability/: checker.py  polyfill.py
usql-python/src/usql/catalog/: function.py
usql-python/src/usql/cli/: main.py
usql-python/src/usql/dialect/: capability.py  dialect.py
usql-python/src/usql/ir/: expr.py  semantic.py  statement.py  types.py
usql-python/src/usql/optimizer/: optimizer.py
usql-python/src/usql/parser/: __init__.py  lexer.py  parser.py
usql-python/src/usql/sqlalchemy_ext/: __init__.py  dialect_map.py  engine.py  listener.py
usql-python/tests/: conftest.py  test_compiler.py  test_ir.py  test_regression.py  test_sqlalchemy_ext.py
(+73 files in other folders)
